--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.1",
   "description": "Use Eta in your entrypoint",
   "main": "./dist/index.js",
-  "types": "./dist/index.d.ts",
+  "types": "./dist/types/index.d.ts",
   "repository": "https://github.com/moyui/vite-plugin-eta.git",
   "author": "moyui默羽",
   "private": false,
